# opportunity-radar

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  GOLIVE.md  MONITORING.md  Makefile  README.md  dashboard.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7a6f2063731a_add_api_keys_table.py  a1b2c3d4e5f6_add_tier_quota_to_api_keys.py  ab8871e14b82_initial_schema.py  c6498feb1d60_add_evidence_json_to_opportunities.py  c8159f408a34_feat_generalize_opportunity_domain_for_.py  ecc4a046d932_add_alert_rules_table.py  f64b922d9554_add_product_discovery.py  fde41ad10e32_add_index_briefings_niche_generated.py
docs/adr/: ADR-001-clean-architecture.md  ADR-002-apscheduler-embedded.md  ADR-003-product-discovery-domain.md  ADR-003-sqlite-to-postgres.md  ADR-004-claude-api-scoring.md
frontend/: demo.html  index.html
infra/nginx/: radar-landing.conf
scripts/: manage_keys.py
src/: config.py  main.py
src/core/: circuit_breaker.py
src/infrastructure/: audit_log.py  email_service.py  niche_data.py  niche_keywords.json  niche_templates.py  quota.py  supabase_provisioning.py
tests/integration/: test_alert_rules_api.py  test_api_auth.py  test_api_briefing.py  test_api_niches.py  test_api_product_briefing.py  test_esg_pipeline.py  test_frustration_signal_adapter.py  test_hacker_news_adapter.py  test_propflow_pipeline.py  test_trajectory_api.py
tests/unit/: test_alert_evaluation_service.py  test_alert_rule_entity.py  test_api_key_entity.py  test_auth_dependency.py  test_briefing.py  test_brute_force.py  test_circuit_breaker.py  test_create_niche.py  (+16 more)
(+116 files in other folders)
